<resources>

    <!-- App general -->
    <string name="app_name">Localyze</string>
    <string name="name_and_version">Localyze</string>

    <!-- Activity titles -->
    <string name="title_activity_place_details">PlaceDetails</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_test_string_json">TestStringJSON</string>

    <!-- Tabs -->
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_title">Search</string>
    <string name="mapLabel">MAP</string>
    <string name="listLabel">LIST</string>

    <!-- Navigation drawer -->
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="descriptionLogoImage">Logo image</string>

    <!-- PlaceDetails activity strings -->
    <string name="send_to">Share</string>
    <string name="noPhoneNumberMessage">No phone number available</string>
    <string name="noWebsiteNotification">No website available</string>
    <string name="removedFavorite">Removed from Favorites</string>
    <string name="addedFavorite">Added to Favorites</string>
    <string name="openNow">Open Now</string>
    <string name="closedNow">Closed</string>
    <string name="shareText">Take a look at </string>
    <string name="shareSubject">Check out</string>
    <string name="placeDetailsImageDescription">Place main photo</string>
    <string name="callLabel">CALL</string>
    <string name="directionsLabel">DIRECTIONS</string>
    <string name="shareLabel">SHARE</string>
    <string name="websiteLabel">WEBSITE</string>
    <string name="addressLabel">Address:</string>
    <string name="opening_hoursLabel">Opening Hours:</string>
    <string name="phoneLabel">Phone:</string>
    <string name="more_pictures_and_info">More pictures and info</string>
    <string name="descriptionCallButton">Call Button</string>
    <string name="descriptionDirectionsButton">Directions button</string>
    <string name="descriptionShareButton">Share button</string>
    <string name="descriptionWebsiteButton">Website button</string>
    <string name="descriptionAddressImage">Address image</string>
    <string name="descriptionOpeningHoursImage">Opening hours image</string>
    <string name="descriptionPhoneNumberImage">Phone number image</string>
    <string name="descriptionArrowSeeMoreImage">Arrow image to see more pictures</string>
    <string name="descriptionSeeMoreOpeningHoursImage">See more opening hours</string>
    <string name="unavailable">Unavailable</string>
    <string name="loadingInformation">Getting information</string>

    <!-- AboutDialog strings -->
    <string name="aboutLabel">About</string>
    <string name="closeContentDescription">Close</string>
    <string name="app_version">Version 1.3</string>
    <string name="appAboutContent">Localyze is a location discovery app developed by Ronit Epstein. \n\nLocalyze helps users find places anywhere in the world.</string>
    <string name="creditsLabel">Credits</string>
    <string name="app_credits">The application uses the Google Places APIs to retrieve locations. Please click below for Google terms and privacy policy.\n\nThanks to Freepik.com and Flaticon.com for the images used in the app.</string>
    <string name="logoDescription" />
    <string name="generalLabel">General</string>
    <string name="termsAndConditions">Terms and conditions</string>
    <string name="poweredByGoogle">Powered by Google image</string>

    <!-- Settings activity strings -->
    <string name="action_settings">Settings</string>
    <string name="colorChoiceLabel">Color Choice</string>
    <string name="measurementUnitTitleLabel">Measurement Unit</string>
    <string name="favoritesLabel">Favorites</string>
    <string name="deleteSummary">Deletes all your saved favorites</string>
    <string name="deleteFavoritesLabel">Delete All Favorites</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deleteAllFavesQuestion">Delete all your saved favorites?</string>
    <string name="favoritesWereDeletedNotice">All favorites were deleted.</string>
    <string name="applicationLabel">Application</string>
    <string name="rate_this_app">Rate the app</string>
    <string name="personalizationLabel">Personalization</string>


    <!-- Map fragment strings -->
    <string name="noResults">No results to show. Try increasing the radius.</string>
    <string name="noResultsQuery">No results to show. Try increasing the radius or changing your query.</string>
    <string name="noFavoritesToShow">No favorites to show</string>
    <string name="descriptionImageCategory">Category image</string>
    <string name="locationAccessRequiredWarning">Location access is required to use Localyze.</string>
    <string name="internetRequiredNotice">Please connect to the internet to use Localyze.</string>
    <string name="findingResults">Finding results...</string>

    <!-- Toolbar fragment strings -->
    <string name="searchEmptyInputText">Search box is empty - please input text</string>
    <string name="select_radius">Select radius</string>
    <string name="filter_by_category">Search by category</string>
    <string name="showingFavorites">Showing your favorites</string>
    <string name="showingNearby">Showing nearby locations</string>
    <string name="descriptionSearchImage">Search button</string>
    <string name="descriptionFindLocationsNearbyButton">Find locations nearby button</string>
    <string name="descriptionFilterSearchButton">Filter search button</string>
    <string name="descriptionMenuButton">Menu button opens navigation drawer</string>
    <string name="locationRequiredNotice">No can do! Location permission must be provided.</string>

    <!-- Dialog number picker strings and arrays -->
    <string name="searchRadiusDialogLabel">Search Radius</string>
    <string name="ok">Ok</string>
    <string name="close_panel">Close panel</string>

    <!-- Category selector pop-up -->
    <string name="searchByCategoryLabel">Search by Category</string>
    <string name="favoriteSymbol">Favorite symbol</string>

    <!-- Navigation drawer menu -->
    <string name="communicateLabel">Communicate</string>
    <string name="shareAppTextPart1">Take a look at this great location discovery app:</string>
    <string name="exclamationMark">!</string>
    <string name="shareAppTextPart2">can help you find and save places around you or anywhere in the world.</string>
    <string name="googlePlayStoreURL">https://play.google.com/store/apps/details?id=com.roniti.localyze</string>

    <!-- Preferences -->
    <string-array name="measurement_label">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="measurement_unit_values">
        <item>km</item>
        <item>mi</item>
    </string-array>

    <string-array name="color_label">
        <item>Pink</item>
        <item>Blue</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Grey</item>
        <item>Red</item>
    </string-array>
    <string-array name="color_values">
        <item>#ff4081</item>
        <item>#3F51B5</item>
        <item>#ff8f00</item>
        <item>#009688</item>
        <item>#673AB7</item>
        <item>#757575</item>
        <item>#C62828</item>
    </string-array>


</resources>
